# Shapescape-Recipe-Image-Generator

./: .gitignore  README.md  development_notes.md  pyproject.toml
docs/: conf.py  index.md
docs/introduction/: data_repository.md  foreground_items.md  gui.md  initial_setup.md  installation.md  project_structure.md  recipe_generation_order.md  recipe_properties.md  templates.md  troubleshooting.md  usage.md  using_variables.md
src/recipe_image_generator/: __init__.py  cache.py  gui.py  image.py  main.py  project.py  recipe_objects.py  utils.py  version.py
